<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="Actions">
            <menu>
                <item
                    android:id="@+id/nav_menu_device_status"
                    android:icon="@drawable/ic_action_nav_menu_device_status"
                    android:title="@string/device_status" />
                <item
                    android:id="@+id/nav_menu_connect_bt_device"
                    android:icon="@drawable/ic_action_nav_menu_bt_connection"
                    android:title="@string/connect_device_label"/>
                <item
                    android:id="@+id/nav_menu_grips"
                    android:icon="@drawable/ic_action_nav_menu_grips"
                    android:title="@string/pre_made_grips" />
                <item
                    android:id="@+id/nav_menu_ASL"
                    android:icon="@drawable/ic_action_nav_menu_asl"
                    android:title="@string/asl" />
            </menu>
        </item>
        <item android:title="About">
            <menu>
                <item
                    android:id="@+id/nav_menu_about_team"
                    android:icon="@drawable/ic_action_nav_menu_group"
                    android:title="Team Members" />
                <item
                    android:id="@+id/nav_menu_about_mission"
                    android:icon="@drawable/ic_action_nav_menu_mission"
                    android:title="Mission" />
            </menu>
        </item>
        <item android:title="Application">
            <menu>
                <item
                    android:id="@+id/nav_menu_settings"
                    android:icon="@drawable/ic_action_settings"
                    android:title="@string/settings" />
            </menu>
        </item>
        <item android:title="@string/version"
            android:enabled="false"/>
    </group>
</menu>